src/objects/Xero_Phone__c.object
<CustomObject>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhoneType__c</fullName>
        <label>PhoneType</label>
        <picklist>
            <picklistValues>
                <fullName>DEFAULT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Xero_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Contact</label>
        <referenceTo>Xero_Contact__c</referenceTo>
        <relationshipLabel>Xero Phones</relationshipLabel>
        <relationshipName>Xero_Phones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Xero Phone</label>
    <nameField>
        <label>Xero Phone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Phones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>